// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ColorSetting should match snapshot, all 1`] = `
<Setting
  helpText="helptext"
  inputId="id"
  label="label"
>
  <ColorInput
    id="id"
    isDisabled={false}
    onChange={[Function]}
    value="#fff"
  />
</Setting>
`;

exports[`components/ColorSetting should match snapshot, clicked on color setting 1`] = `
<Setting
  helpText="helptext"
  inputId="id"
  label="label"
>
  <ColorInput
    id="id"
    isDisabled={false}
    onChange={[Function]}
    value="#fff"
  />
</Setting>
`;

exports[`components/ColorSetting should match snapshot, disabled 1`] = `
<Setting
  inputId="id"
  label="label"
>
  <ColorInput
    id="id"
    isDisabled={true}
    onChange={[Function]}
    value="#fff"
  />
</Setting>
`;

exports[`components/ColorSetting should match snapshot, no help text 1`] = `
<Setting
  inputId="id"
  label="label"
>
  <ColorInput
    id="id"
    isDisabled={false}
    onChange={[Function]}
    value="#fff"
  />
</Setting>
`;
